fix subject/course transition and overflow handling

--- a/css/classifier.styl
+++ b/css/classifier.styl
@@ -15,20 +15,11 @@
     margin-right -50%
     margin-left auto
     right -320px
-    transition margin 1s//, opacity 4s
+    transition margin 1s
 
     &.visible
-
-      position absolute
-      width 640px
-      height 400px
-      z-index 999
-      margin-top 0
-      margin-bottom 0
       margin-right 50%
-      margin-left auto
-      right -320px
-      transition margin 1s//, opacity 4s
+      transition margin 1s
 
     .course-figure-credits
       text-align center
@@ -104,26 +95,22 @@
         width 50%
 
   #subject-container
-    position absolute
+    position relative
     width 1090px
     height 400px
-    margin-top 0
-    margin-bottom 0
-    margin-right 50%
-    right -545px
-    transition margin 1s
+    margin-top 0px
+    margin-bottom 0px
+    margin-left auto
+    margin-right auto
+    right 0%
+    z-index 999
+    transition right 1s
 
     &.hidden
-      position absolute
-      width 1090px
-      height 400px
-      z-index 999
-      margin-top 0
-      margin-bottom 0
-      margin-right 200%
-      right -545px
-      transition margin 1s
-      
+      margin-right auto
+      right 100%
+      transition right 1s
+
     .subject-header
       h3
         color white
