--- a/css/layout.styl
+++ b/css/layout.styl
@@ -4,7 +4,7 @@ html
   font 14px MAIN_FONT_FAMILY
   font-weight 400
   height 100%
-  overflow-x auto
+  overflow-x scroll
   overflow-y scroll
   position relative
   width 100%
